--- a/index.html
+++ b/index.html
@@ -62,14 +62,20 @@
 <body>
     <header>RELEASES</header>
     <div class="desktop" id="main-desktop">
-        <!-- Single folder -->
+        <!-- Psykose Folder -->
         <div class="folder" data-folder="psykose">
             <img src="https://icons.iconarchive.com/icons/custom-icon-design/flatastic-1/512/folder-icon.png" alt="Folder Icon">
             <p>Psykose</p>
         </div>
+
+        <!-- BETAFIRSTONE Folder -->
+        <div class="folder" data-folder="betafirstone">
+            <img src="https://icons.iconarchive.com/icons/custom-icon-design/flatastic-1/512/folder-icon.png" alt="Folder Icon">
+            <p>Betafirstone</p>
+        </div>
     </div>
 
-    <!-- Folder content -->
+    <!-- Psykose Folder Content -->
     <div class="desktop hidden" id="psykose">
         <div class="file">
             <img src="https://via.placeholder.com/100?text=" alt="File Icon">
@@ -79,7 +85,18 @@
             <img src="https://via.placeholder.com/100?text=" alt="File Icon">
             <p></p>
         </div>
-        <!-- Add more tracks here -->
+    </div>
+
+    <!-- BETAFIRSTONE Folder Content -->
+    <div class="desktop hidden" id="betafirstone">
+        <div class="file">
+            <img src="https://via.placeholder.com/100?text=" alt="File Icon">
+            <p></p>
+        </div>
+        <div class="file">
+            <img src="https://via.placeholder.com/100?text=" alt="File Icon">
+            <p></p>
+        </div>
     </div>
 
     <button class="back-button" id="back-button">Back</button>
